--- a/class project ui/index.html
+++ b/class project ui/index.html
@@ -17,6 +17,11 @@
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
+		<!-- html pages -->
+	<link rel="stylesheet" href="index.html">
+	<link rel="stylesheet" href="viewmore.html">
+	<link rel="stylesheet" href="contact.html">
+
 </head>
 
 <body data-spy="scroll" data-target="#mainNav" data-offset="70">
@@ -37,17 +42,25 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
-						<li class="nav-item active"><a class="nav-link" href="#home">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="#feature">مطالب</a></li>
+						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
 						<li class="nav-item"><a class="nav-link" href="#video">انجمن ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">پست ها</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html"> مقالات</a></li>
+									<li class="nav-item"><a class="nav-link" href="viewmore.html"> مقالات</a></li>
 								</ul>
 							</li>
-						<li class="nav-item"><a class="nav-link" href="#screen"> تماس با ما</a>
+
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">گالری</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="blog.https://skybox.blockadelabs.com/c745ea2ccb06b1ecebfb77b1d19f8271"> کتابخانه</a></li>
+									<li class="nav-item"><a class="nav-link" href="https://skybox.blockadelabs.com/7420c30c3cef7393b08d90dfc8b7a73e"> سه بعدی</a></li>
+								</ul>
+							</li>
+
+						<li class="nav-item"><a class="nav-link" href="contact.html"> تماس با ما</a>
 						<li class="nav-item"><a class="nav-link" href="contact.html">ورود</a></li>
 					</ul>
 				</div>
@@ -108,7 +121,7 @@
 					<h4>پست یا مقاله۱ </h4>
 					<p>برنامه نویسان این اَپ آن را به گونه ای برناممه نویسی کرده اند که سرعت آن را به صورت فوق العاده ای بالا برده اند.</p>
 					<br>
-					<button type="button" class="btn btn-warning">مشاهده بیشتر</button>
+					<button type="button" class="btn btn-warning" ><a href="single-blog.html" style="color: black;">ادامه مطلب</a></button>
 				</div>
 			</div>
 			<!--ye card-->
@@ -118,7 +131,7 @@
 					<h4>پست یا مقاله۲ </h4>
 					<p>برنامه نویسان این اَپ آن را به گونه ای برناممه نویسی کرده اند که سرعت آن را به صورت فوق العاده ای بالا برده اند.</p>
 					<br>
-					<button type="button" class="btn btn-warning">مشاهده بیشتر</button>
+					<button type="button" class="btn btn-warning" ><a href="single-blog.html" style="color: black;">ادامه مطلب</a></button>
 				</div>
 			</div>
 			<!--ye card-->
@@ -128,7 +141,7 @@
 								<h4>پست یا مقاله۳ </h4>
 								<p>برنامه نویسان این اَپ آن را به گونه ای برناممه نویسی کرده اند که سرعت آن را به صورت فوق العاده ای بالا برده اند.</p>
 								<br>
-								<button type="button" class="btn btn-warning">مشاهده بیشتر</button>
+								<button type="button" class="btn btn-warning" ><a href="single-blog.html" style="color: black;">ادامه مطلب</a></button>
 							</div>
 						</div>
 						<!--ye card-->
@@ -138,7 +151,7 @@
 								<h4>پست یا مقاله۴ </h4>
 								<p>برنامه نویسان این اَپ آن را به گونه ای برناممه نویسی کرده اند که سرعت آن را به صورت فوق العاده ای بالا برده اند.</p>
 								<br>
-								<button type="button" class="btn btn-warning">مشاهده بیشتر</button>
+								<button type="button" class="btn btn-warning" ><a href="single-blog.html" style="color: black;">ادامه مطلب</a></button>
 							</div>
 						</div>
 						<!--ye card-->
@@ -146,6 +159,26 @@
 	</div>
 </section>
 <!--================End Feature Area =================-->
+
+
+<!--================Interior Area =================-->
+<section class="interior-area">
+	<div class="container">
+		<div class="interior-inner row">
+			<div class="col-lg-6">
+				<img class="img-fluid" src="pics/interior-1.png" alt="">
+			</div>
+			<div class="col-lg-5 offset-lg-1">
+				<div class="interior-text">
+					<h4>مسابقه کاپ برنامه نویسی</h4>
+					<p>“اپلیکیشن موبایل که عمدتا با نام app از آن یاد می شود، نوعی نرم افزار کاربردی است که برای اجرا روی دستگاه های موبایل طراحی شده است. عمده اپلیکیشن های گوشی خدماتی مشابه کامپیوترها ارائه می دهند (مثل پخش ویدیو). اپ ها معمولا نرم افزارهای کم حجم و با عملکرد محدود هستند، بعنوان مثال یک اپلیکیشن برای پخش ویدیو یا اپلیکیشنی که فقط دانلودهای شما را مدیریت می کند و به همین دلیل هم بسیار با سیستم های کامپیوتری یکپارچه متفاوت اند.”</p>
+					<a class="main-btn" href="#"> ثبت نام</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!--================End Interior Area =================-->
 
 <!--================Latest News Area =================-->
 <section class="latest-news-area p-120">
@@ -200,72 +233,16 @@
 		</div>
 		<br>
 		<div class="main-title">
-			<a class="main-btn" href="#">بیشتر بخوانید</a>
+			<a class="main-btn" href="viewmore.html">مشاهده بیشتر </a>
 		</div>
 	</div>
 </section>
 <!--================End Latest News Area =================-->
 
 
-<!--================Interior Area =================-->
-<section class="interior-area">
-	<div class="container">
-		<div class="interior-inner row">
-			<div class="col-lg-6">
-				<img class="img-fluid" src="pics/interior-1.png" alt="">
-			</div>
-			<div class="col-lg-5 offset-lg-1">
-				<div class="interior-text">
-					<h4>ما معتقدیم که معماری داخلی مهم تر است</h4>
-					<p>“اپلیکیشن موبایل که عمدتا با نام app از آن یاد می شود، نوعی نرم افزار کاربردی است که برای اجرا روی دستگاه های موبایل طراحی شده است. عمده اپلیکیشن های گوشی خدماتی مشابه کامپیوترها ارائه می دهند (مثل پخش ویدیو). اپ ها معمولا نرم افزارهای کم حجم و با عملکرد محدود هستند، بعنوان مثال یک اپلیکیشن برای پخش ویدیو یا اپلیکیشنی که فقط دانلودهای شما را مدیریت می کند و به همین دلیل هم بسیار با سیستم های کامپیوتری یکپارچه متفاوت اند.”</p>
-					<a class="main-btn" href="#">نمایش جزئیات</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--================End Interior Area =================-->
-<section class="feature-area p-120" id="feature">
-	<div class="container">
-		<div class="main-title">
-			<h2>نتایج جستجو</h2>
-			<p>اون چیزی که کاربر رو ترغیب که اپلیکیشن شما رو نصب کنه، کیفیت و سرعت و کاربرد اپلیکیشن شما نیست، کاربر با دیدن اسکرین شات‌ها و آیکن و نام اپلیکیشن شما و خواندن توضیحات، تصمیم می‌گیره که آیا این اپلیکیشن بدردش می‌خوره یا خیر و این موضوعات هستند که باعث می‌شه اپلیکیشن شما شکست بخوره یا موفق بشه.</p>
-		</div>
-		<div class="feature-inner row">
-			<div class="col-lg-3 col-md-6">
-				<div class="feature-item">
-					<img src="pics/icon/f-icon-1.png" alt="">
-					<h4>نگهداری داده ها</h4>
-					<p>این اپلیکیشن به صورت خودکار تمامی اطلاعات و داده های شما را ذخیره می کند و آن را در حافظه ی گوشی شما نگهداری می کند.</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="feature-item">
-					<img src="pics/icon/f-icon-1.png" alt="">
-					<h4>سرعت بالا</h4>
-					<p>برنامه نویسان این اَپ آن را به گونه ای برناممه نویسی کرده اند که سرعت آن را به صورت فوق العاده ای بالا برده اند.</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="feature-item">
-					<img src="pics/icon/f-icon-1.png" alt="">
-					<h4>کاربر پسند</h4>
-					<p>در این اپلیکیشن تمامی آیکون ها برای بار اول به شما توضیح داده می شوند و هر چیزی طبق اصولل سر جای خودش است.</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="feature-item">
-					<img src="pics/icon/f-icon-1.png" alt="">
-					<h4>کیفیت</h4>
-					<p>کیفیت بالای این محصول ما را جز 50 نفر اول فروش اپلیکیشن های کاربردی قرار داده است. با یک بار استفاده متوجه خواهید شد.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--================End Feature Area =================-->
 
-<!--================Interior Area =================-->
+
+<!---
 <section class="interior-area">
 	<div class="container">
 		<div class="interior-inner row">
@@ -282,7 +259,12 @@
 		</div>
 	</div>
 </section>
-<!--================Interior Area =================-->
+
+
+
+
+
+
 <section class="interior-area interior-two">
 	<div class="container">
 		<div class="interior-inner row">
@@ -305,9 +287,14 @@
 		</div>
 	</div>
 </section>
-<!--================End Interior Area =================-->
 
-<!--================Price Area =================-->
+
+
+
+
+
+
+
 <section class="price-area p-120" id="price">
 	<div class="container">
 		<div class="main-title">
@@ -393,13 +380,20 @@
 		</div>
 	</div>
 </section>
-<!--================End Price Area =================-->
 
-<!--================Feature Area =================-->
+
+
+
+
+
+
+
+
+
 <section class="screenshot-area p-120" id="screen">
 	<div class="container">
 		<div class="main-title">
-			<h2>اسکرین شات ها</h2>
+			<h2>سارا</h2>
 			<p>امروزه اپلیکیشن ها تنوع بسیار زیادی دارند بسته به اینکه کاربر چه نیازی دارد میتواند آن را دانلود و از آن استفاده کند و با آن نیاز خود را پاسخ دهد.در نظر داشته باشیم که صرفا محدود به موبایل ­ها و تبلت­ ها نمیشوند.</p>
 		</div>
 		<div class="screenshot-inner owl-carousel owl-rtl">
@@ -418,9 +412,17 @@
 		</div>
 	</div>
 </section>
-<!--================End Feature Area =================-->
 
-<!--================Testimonials Area =================-->
+
+
+
+
+
+
+
+
+
+
 <section class="testimonials-area p-120">
 	<div class="container">
 		<div class="main-title">
@@ -459,9 +461,15 @@
 		</div>
 	</div>
 </section>
-<!--================End Testimonials Area =================-->
 
-<!--================Download App Area =================-->
+
+
+
+
+
+
+
+
 <section class="download-app-area p-120">
 	<div class="container">
 		<div class="app-inner">
@@ -494,9 +502,15 @@
 		</div>
 	</div>
 </section>
-<!--================End Download App Area =================-->
 
-<!--================Latest News Area =================-->
+
+
+
+
+
+
+
+
 <section class="latest-news-area p-120">
 	<div class="container">
 		<div class="main-title">
@@ -543,7 +557,15 @@
 		</div>
 	</div>
 </section>
-<!--================End Latest News Area =================-->
+
+-->
+
+
+
+
+
+
+
 
 <!--================ start footer Area  =================-->
 <footer class="footer-area p-120">
@@ -551,12 +573,12 @@
 		<div class="row">
 			<div class="col-lg-3  col-md-6 col-sm-6">
 				<div class="single-footer-widget tp-widgets">
-					<h6 class="footer-title">جدیدترین محصولات</h6>
+					<h6 class="footer-title"> قسمت ها</h6>
 					<ul class="list">
-						<li><a href="#">سایت مدیریت شده</a></li>
-						<li><a href="#">مدیریت اعتبار</a></li>
-						<li><a href="#">ابزار ها</a></li>
-						<li><a href="#">سرویس مارکتینگ</a></li>
+						<li><a href="viewmore.html"> جدیدترین مقالات</a></li>
+						<li><a href="blog.html">پست ها </a></li>
+						<li><a href="#"> انجمن ها</a></li>
+						<li><a href="contact.html">تماس با ما </a></li>
 					</ul>
 				</div>
 			</div>
@@ -573,21 +595,6 @@
 							<div class="mt-10 info"></div>
 						</form>
 					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 col-sm-6 offset-lg-1">
-				<div class="single-footer-widget instafeed">
-					<h6 class="footer-title">آخرین پست های اینستاگرام</h6>
-					<ul class="list instafeed d-flex flex-wrap">
-						<li><img src="pics/instagram/Image-01.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-02.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-03.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-04.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-05.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-06.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-07.jpg" alt=""></li>
-						<li><img src="pics/instagram/Image-08.jpg" alt=""></li>
-					</ul>
 				</div>
 			</div>
 		</div>
