--- a/class project ui/blog.html
+++ b/class project ui/blog.html
@@ -17,6 +17,8 @@
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="cat.html">
+
 </head>
 
 <body data-spy="scroll" data-target="#mainNav" data-offset="70" style="background-color: #E9E7F2;">
@@ -36,7 +38,7 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="#video">انجمن ها</a>
+						<li class="nav-item"><a class="nav-link" href="cat.html"> دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
@@ -387,7 +389,7 @@
 					<ul class="list">
 						<li><a href="viewmore.html"> جدیدترین مقالات</a></li>
 						<li><a href="blog.html">پست ها </a></li>
-						<li><a href="#"> انجمن ها</a></li>
+						<li><a href="cat.html">دسته بندی ها</a></li>
 						<li><a href="contact.html">تماس با ما </a></li>
 					</ul>
 				</div>
