--- a/class project ui/index.html
+++ b/class project ui/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="index.html">
 	<link rel="stylesheet" href="viewmore.html">
 	<link rel="stylesheet" href="contact.html">
+	<link rel="stylesheet" href="cat.html">
 
 </head>
 
@@ -43,20 +44,12 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="#video">انجمن ها</a>
+						<li class="nav-item"><a class="nav-link" href="cat.html"> دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">پست ها</a></li>
 									<li class="nav-item"><a class="nav-link" href="viewmore.html"> مقالات</a></li>
-								</ul>
-							</li>
-
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">گالری</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.https://skybox.blockadelabs.com/c745ea2ccb06b1ecebfb77b1d19f8271"> کتابخانه</a></li>
-									<li class="nav-item"><a class="nav-link" href="https://skybox.blockadelabs.com/7420c30c3cef7393b08d90dfc8b7a73e"> سه بعدی</a></li>
 								</ul>
 							</li>
 
@@ -160,9 +153,7 @@
 </section>
 <!--================End Feature Area =================-->
 
-
-<!--================Interior Area =================-->
-<section class="interior-area">
+<!--<section class="interior-area">
 	<div class="container">
 		<div class="interior-inner row">
 			<div class="col-lg-6">
@@ -177,7 +168,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section>-->
 <!--================End Interior Area =================-->
 
 <!--================Latest News Area =================-->
@@ -577,7 +568,7 @@
 					<ul class="list">
 						<li><a href="viewmore.html"> جدیدترین مقالات</a></li>
 						<li><a href="blog.html">پست ها </a></li>
-						<li><a href="#"> انجمن ها</a></li>
+						<li><a href="cat.html">دسته بندی ها</a></li>
 						<li><a href="contact.html">تماس با ما </a></li>
 					</ul>
 				</div>
