--- a/class project ui/single-blog.html
+++ b/class project ui/single-blog.html
@@ -20,6 +20,8 @@
 	<link rel="stylesheet" href="index.html">
 	<link rel="stylesheet" href="viewmore.html">
 	<link rel="stylesheet" href="contact.html">
+	<link rel="stylesheet" href="cat.html">
+
 
 
 </head>
@@ -41,7 +43,7 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
-						<li class="nav-item"><a class="nav-link" href="#video">انجمن ها</a>
+						<li class="nav-item"><a class="nav-link" href="cat.html"> دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
@@ -74,11 +76,11 @@
 <section class="blog-area single-post-area p-120">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 posts-list">
+			<div class="col-lg-8 posts-list" style="margin-right: 15%;">
 				<div class="single-post row">
 					<div class="col-lg-12">
 						<div class="feature-img">
-							<img class="img-fluid" src="pics/blog/feature-img1.jpg" alt="">
+							<img class="img-fluid" src="pics/blog/feature-img1.jpg" alt="";>
 						</div>
 					</div>
 					<div class="col-lg-3  col-md-3">
@@ -204,102 +206,7 @@
 					</form>
 				</div>
 			</div>
-			<div class="col-lg-4">
-				<div class="blog-left-sidebar">
-					<aside class="single-sidebar-widget search-widget">
-						<!--<div class="input-group">
-							<input type="text" class="form-control" placeholder="جستجو در پست ها">
-							<span class="input-group-btn">
-								<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-							</span>
-						</div>--><!-- /input-group -->
-					</aside>
-					<aside class="single-sidebar-widget author-widget">
-						<img class="author-img rounded-circle" src="pics/blog/author.png" alt="">
-						<h4>میلاد محمدی</h4>
-						<p> استاد محققق</p>
-						<p>میلاد محمدی‌ کشمرزی متولد هفتم مهرماه ۱۳۷۲ در تهران است. میلاد و برادر دوقلویش مهرداد در حالی متولد شدند که خانواده محمدی ۲ پسر داشتند و با این دو قلو تعداد برادران به ۴ رسید. </p>
-						<div class="br"></div>
-					</aside>
-					<aside class="single-sidebar-widget popular-post-widget">
-						<h3 class="widget-title">پست های پربازدید</h3>
-						<div class="media post-item">
-							<img src="pics/blog/popular-post/post1.jpg" alt="post">
-							<div class="media-body">
-								<a href="blog-details.html"><h3>نتیجه ی بازی دربی</h3></a>
-								<p>02 ساعت پیش</p>
-							</div>
-						</div>
-						<div class="media post-item">
-							<img src="pics/blog/popular-post/post2.jpg" alt="post">
-							<div class="media-body">
-								<a href="blog-details.html"><h3>کاخ سفید و اتفاقات جالب اخیر</h3></a>
-								<p>02 ساعت پیش</p>
-							</div>
-						</div>
-						<div class="media post-item">
-							<img src="pics/blog/popular-post/post3.jpg" alt="post">
-							<div class="media-body">
-								<a href="blog-details.html"><h3>دوربین های دید در شب</h3></a>
-								<p>03 ساعت پیش</p>
-							</div>
-						</div>
-						<div class="media post-item">
-							<img src="pics/blog/popular-post/post4.jpg" alt="post">
-							<div class="media-body">
-								<a href="blog-details.html"><h3>اپلیکیشن جدید موقعیت یاب</h3></a>
-								<p>01 ساعت پیش</p>
-							</div>
-						</div>
-						<div class="br"></div>
-					</aside>
-					<aside class="single-sidebar-widget post-category-widget">
-						<h4 class="widget-title">دسته بندی پست ها</h4>
-						<ul class="list cat-list">
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>تکنولوژی</p>
-									<p>37</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>سبک زندگی</p>
-									<p>24</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>فشن</p>
-									<p>59</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>هنر</p>
-									<p>29</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>غذا</p>
-									<p>15</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>دوربین</p>
-									<p>09</p>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="d-flex justify-content-between">
-									<p>ماجراجویی</p>
-									<p>44</p>
-								</a>
-							</li>
-						</ul>
-					</aside>
+
 					<!--
 						<aside class="single-sidebar-widget newsletter-widget">
 						<h4 class="widget-title">خبرنامه</h4>
@@ -351,7 +258,7 @@
 					<ul class="list">
 						<li><a href="viewmore.html"> جدیدترین مقالات</a></li>
 						<li><a href="blog.html">پست ها </a></li>
-						<li><a href="#"> انجمن ها</a></li>
+						<li><a href="cat.html"> دسته بندی ها</a></li>
 						<li><a href="contact.html">تماس با ما </a></li>
 					</ul>
 				</div>
