--- a/class project ui/viewmore.html
+++ b/class project ui/viewmore.html
@@ -17,6 +17,9 @@
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="cat.html">
+
+
 </head>
 
 <body data-spy="scroll" data-target="#mainNav" data-offset="70">
@@ -28,7 +31,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<a class="navbar-brand logo-h" href="index.html" style="margin-right: -5%;"margin-top: -5%;"><img src="pics/logo.png" alt=""></a>
+				<a class="navbar-brand logo-h" href="index.html" style="margin-right: -5%;margin-top: -5%;"><img src="pics/logo.png" alt=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -39,7 +42,7 @@
 					<ul class="nav navbar-nav menu-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">صفحه نخست</a></li>
 						<li class="nav-item"><a class="nav-link" href="#feature">مطالب</a></li>
-						<li class="nav-item"><a class="nav-link" href="#video">انجمن ها</a>
+						<li class="nav-item"><a class="nav-link" href="cat.html">دسته بندی ها</a>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">بلاگ</a>
 								<ul class="dropdown-menu">
@@ -322,7 +325,7 @@
 					<ul class="list">
 						<li><a href="viewmore.html"> جدیدترین مقالات</a></li>
 						<li><a href="blog.html">پست ها </a></li>
-						<li><a href="#"> انجمن ها</a></li>
+						<li><a href="cat.html">دسته بندی ها</a></li>
 						<li><a href="contact.html">تماس با ما </a></li>
 					</ul>
 				</div>
