--- a/admin/adminunis.html
+++ b/admin/adminunis.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="adminbakhshha.html">
     <link rel="stylesheet" href="adminunis.html">
     <link rel="stylesheet" href="admin1.html">
+    <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>قالب ریسپانسیو تک صفحه ای BulkApp :: دریافت شده از وب روبیک</title>
+	<!-- fav icon -->
+	<link rel="icon" href="pics/favicon.png" type="image/png">
+	<!-- bootstrap css -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- fonts -->
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<!-- style and css -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<!-- main css -->
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="index.html">
+	<link rel="stylesheet" href="viewmore.html">
+	<link rel="stylesheet" href="contact.html">
+	<link rel="stylesheet" href="cat.html">
 
 
 
@@ -24,7 +44,6 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">خروج</a>
                 </li>
             </ul>
         </div>
@@ -41,13 +60,16 @@
                 <div class="col-md-3">
                     <div id="sidebar">
                         <div class="list-group">
+                            <h4 style="text-align: center; color: rgb(255, 221, 254);"> مدیریت</h4>
                             <a href="#" class="list-group-item" style="color: #fff;">مدیریت رشته ها </a>
                             <a href="#" class="list-group-item" style="color: #fff;"> مدیریت اعضا</a>
                             <a href="#" class="list-group-item" style="color: #fff;"> مدیریت انجمن ها</a>
                             <a href="adminunis.html" class="list-group-item" style="color: #fff;"> مدیریت  دانشکده</a>
                             <a href="adminbakhshha.html" class="list-group-item" style="color: #fff;"> مدیریت  بخش ها</a>
-
                             <a href="admin1.html" class="list-group-item" style="color: #fff;"> مدیریت  بلاگ</a>
+                            <br>
+                            <a href="admin1.html" class="list-group-item" style="color: #ffffff;text-align: center !important; background-color:#fc83b0;border-radius: 20px;margin-left: 16px;"> خروج</a>
+
                         </div>
                     </div>
                 </div>
